<resources>
    <string name="app_name">AixMessage</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AixMessage</string>
    <string name="nav_header_subtitle">A Mass texting tool</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_status">Status</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">关于</string>
    <string name="nav_Aboutline">About</string>
</resources>
